<resources>
    <string name="app_name">Deneme</string>
    <string name="title_activity_cafe_page">CafePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arıza Bakım Takip Sistemi</string>
    <string name="nav_header_subtitle">Ariza A.Ş.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="solmenu_anasayfa">Ana Sayfa</string>
    <string name="solmenu_arizaac">Arıza Aç</string>
    <string name="solmenu_arizalistesi">Arıza Listesi</string>
    <string name="solmenu_cihaztanimlama">Cihaz Tanımlama</string>
    <string name="solmenu_cihazlistesi">Cihaz Listesi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>